[B]1.0.11[/B]
- added Polish translation

[B]1.0.9[/B]
- translation cosmetics

[B]1.0.8[/B]
- changed hdtrailers.net version dependency

[B]1.0.7[/B]
- final fix for nfourl scraping issue

[B]1.0.6[/B]
- fixed nfourl scraping issue

[B]1.0.5[/B]
- switch tmdb scraper to chain tmdb scraper library functions

[B]1.0.4[/B]
- replace dtrailer.com with HD-Trailers.net for trailer scraping

[B]1.0.3[/B]
- scraper library interfaces changed. no functional changes

[B]1.0.2[/B]

- scraper might fetch wrong studio, genre and country values
- no search results in case the release date is missing

[B]1.0.1[/B]

- various fixes after api change

[B]1.0.0[/B]

- Initial import into addons repository