@@ -2,4 +2,5 @@
 <strings>
     <string id="30000">Enable Fanart</string>
     <string id="30001">Enable Trailers from HD-Trailers.net</string>
+    <string id="30002">Preferred language</string>
 </strings>
