@@ -2,4 +2,5 @@
 <strings>
     <string id="30000">Fanartképek engedélyezése</string>
     <string id="30001">Filmelőzetesek a HD-Trailers.net-ről</string>
+    <string id="30002">Preferált nyelv</string>
 </strings>
